@@ -81,7 +81,7 @@
  */
 
 (function() {
-  var $, $$, Anonymize, ArchiveLink, BanChecker, Build, CatalogLinks, Conf, Config, DeleteLink, DownloadLink, EmbedLink, ExpandComment, ExpandThread, Favicon, FileInfo, Filter, Get, IDColor, ImageExpand, ImageHover, ImageReplace, Keybinds, Linkify, Main, Markdown, Menu, Nav, Options, Prefetch, QR, QuoteBacklink, QuoteCT, QuoteInline, QuoteOP, QuotePreview, Quotify, Redirect, RemoveSpoilers, ReplyHiding, ReportLink, RevealSpoilers, Sauce, StrikethroughQuotes, ThreadHiding, ThreadStats, Time, TitlePost, UI, Unread, Updater, Watcher, d, g, _base;
+  var $, $$, Anonymize, ArchiveLink, BanChecker, Build, CatalogLinks, Conf, Config, DeleteLink, DownloadLink, EmbedLink, ExpandComment, ExpandThread, Favicon, FileInfo, Filter, Get, IDColor, ImageExpand, ImageHover, ImageReplace, Keybinds, Linkify, Main, Markdown, Menu, Nav, Options, Prefetch, QR, QuoteBacklink, QuoteCT, QuoteInline, QuoteOP, QuotePreview, Quotify, Redirect, RelativeDates, RemoveSpoilers, ReplyHiding, ReportLink, RevealSpoilers, Sauce, StrikethroughQuotes, ThreadHiding, ThreadStats, Time, TitlePost, UI, Unread, Updater, Watcher, d, g, _base;
 
   Config = {
     main: {
@@ -91,6 +91,7 @@
         '404 Redirect': [true, 'Redirect dead threads and images'],
         'Keybinds': [true, 'Binds actions to keys'],
         'Time Formatting': [true, 'Arbitrarily formatted timestamps, using your local time'],
+        'Relative Post Dates': [false, 'Display post times as "3 minutes ago" or similar. Overrides "Time Formatting".'],
         'File Info Formatting': [true, 'Reformats the file information'],
         'Comment Expansion': [true, 'Expand too long comments'],
         'Thread Expansion': [true, 'View all replies'],
@@ -553,8 +554,19 @@
       size = unit > 1 ? Math.round(size * 100) / 100 : Math.round(size);
       return "" + size + " " + ['B', 'KB', 'MB', 'GB'][unit];
     },
-    hidden: function() {
-      return d.hidden || d.oHidden || d.mozHidden || d.webkitHidden;
+    debounce: function(wait, fn) {
+      var timeout;
+      timeout = null;
+      return function() {
+        if (timeout) {
+          clearTimeout(timeout);
+        } else {
+          fn.apply(this, arguments);
+        }
+        return timeout = setTimeout((function() {
+          return timeout = null;
+        }), wait);
+      };
     }
   });
 
@@ -2079,7 +2091,7 @@
       if (QR.captcha.isEnabled && /captcha|verification/i.test(el.textContent)) {
         $('[autocomplete]', QR.el).focus();
       }
-      if (Conf['Focus on Alert'] && $.hidden()) {
+      if (Conf['Focus on Alert'] && d.hidden) {
         return alert(el.textContent);
       }
     },
@@ -3453,7 +3465,7 @@
         Updater.cb.post();
         return Updater.postID = e.detail.postID;
       });
-      return $.on(d, 'visibilitychange ovisibilitychange mozvisibilitychange webkitvisibilitychange', this.cb.visibility);
+      return $.on(d, 'visibilitychange', this.cb.visibility);
     },
     /*
       http://freesound.org/people/pierrecartoons1979/sounds/90112/
@@ -3482,7 +3494,7 @@
         return delete Updater.postID;
       },
       visibility: function() {
-        if ($.hidden()) {
+        if (d.hidden) {
           return;
         }
         Updater.unsuccessfulFetchCount = 0;
@@ -3524,7 +3536,7 @@
         return Updater.scrollBG = this.checked ? function() {
           return true;
         } : function() {
-          return !$.hidden();
+          return !d.hidden;
         };
       },
       load: function() {
@@ -3601,7 +3613,7 @@
           Updater.count.className = count ? 'new' : null;
         }
         if (count) {
-          if (Conf['Beep'] && $.hidden() && (Unread.replies.length === 0)) {
+          if (Conf['Beep'] && d.hidden && (Unread.replies.length === 0)) {
             Updater.audio.play();
           }
           Updater.unsuccessfulFetchCount = 0;
@@ -3647,7 +3659,7 @@
         bg = +Conf['BGInterval'];
       }
       j = Math.min(this.unsuccessfulFetchCount, 9);
-      if (!$.hidden()) {
+      if (!d.hidden) {
         if (Conf['Optional Increase']) {
           return Math.max(i, Updater.getInput(Conf['updateIncrease'].split(','))[j]);
         }
@@ -4014,6 +4026,64 @@
       y: function() {
         return Time.date.getFullYear() - 2000;
       }
+    }
+  };
+
+  RelativeDates = {
+    INTERVAL: $.MINUTE,
+    init: function() {
+      Main.callbacks.push(this.node);
+      this.timeout = setTimeout(this.flush, this.INTERVAL);
+      return $.on(d, 'visibilitychange', this.flush);
+    },
+    node: function(post) {
+      var date;
+      date = $('.postInfo > .dateTime', post.el);
+      RelativeDates.format(date);
+      RelativeDates.setUpdate(date);
+      return RelativeDates.flush();
+    },
+    format: function(dateEl) {
+      var date;
+      date = new Date(dateEl.dataset.utc * 1000);
+      dateEl.textContent = RelativeDates.relative(date);
+      return dateEl.title = date.toString();
+    },
+    relative: function(date) {
+      var diff, number, rounded, unit;
+      diff = Date.now() - date.getTime();
+      unit = (number = diff / $.DAY) > 1 ? 'day' : (number = diff / $.HOUR) > 1 ? 'hour' : (number = diff / $.MINUTE) > 1 ? 'minute' : (number = diff / $.SECOND, 'second');
+      rounded = Math.round(number);
+      if (rounded !== 1) {
+        unit += 's';
+      }
+      return "" + rounded + " " + unit + " ago";
+    },
+    stale: [],
+    flush: $.debounce($.SECOND, function() {
+      var dateEl, _i, _len, _ref;
+      if (d.hidden) {
+        return;
+      }
+      _ref = RelativeDates.stale;
+      for (_i = 0, _len = _ref.length; _i < _len; _i++) {
+        dateEl = _ref[_i];
+        if (d.contains(dateEl)) {
+          RelativeDates.format(dateEl);
+          RelativeDates.setUpdate(dateEl);
+        }
+      }
+      RelativeDates.stale = [];
+      clearTimeout(RelativeDates.timeout);
+      return RelativeDates.timeout = setTimeout(RelativeDates.flush, RelativeDates.INTERVAL);
+    }),
+    setUpdate: function(dateEl) {
+      var delay, diff;
+      diff = Date.now() - dateEl.dataset.utc * 1000;
+      delay = diff > $.HOUR ? diff % $.HOUR : diff > $.MINUTE ? diff % $.MINUTE : diff % $.SECOND;
+      return setTimeout((function() {
+        return RelativeDates.stale.push(dateEl);
+      }), delay);
     }
   };
 
@@ -6302,10 +6372,26 @@
         settings.disableAll = true;
         localStorage.setItem('4chan-settings', JSON.stringify(settings));
       }
+      Main.polyfill();
       if (g.CATALOG) {
         return $.ready(Main.catalog);
       } else {
         return Main.features();
+      }
+    },
+    polyfill: function() {
+      var event, prefix, property;
+      if (!('visibilityState' in document)) {
+        prefix = 'mozVisibilityState' in document ? 'moz' : 'webkitvisibilityState' in document ? 'webkit' : 'o';
+        property = prefix + 'VisibilityState';
+        event = prefix + 'visibilitychange';
+        d.visibilityState = d[property];
+        d.hidden = d.visibilityState === 'hidden';
+        return $.on(d, event, function() {
+          d.visibilityState = d[property];
+          d.hidden = d.visibilityState === 'hidden';
+          return $.event(d, new CustomEvent('visibilitychange'));
+        });
       }
     },
     catalog: function() {
@@ -6374,6 +6460,9 @@
       }
       if (Conf['Time Formatting']) {
         Time.init();
+      }
+      if (Conf['Relative Post Dates']) {
+        RelativeDates.init();
       }
       if (Conf['File Info Formatting']) {
         FileInfo.init();
