@@ -1,4 +1,6 @@
 master
+- Queue
+  Add relative time ("35 seconds ago") date formatting option.
 
 2.38.3
 - noface
